// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
  >
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 iNjnaZ"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__StyledRow-sc-o1ook0-0 lmTMKd itvFNV bJMZth"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-1 ifJmrH"
        />
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-between; z-index: 2;"
          width="100%"
        >
          <div
            class="css-vurnku"
            style="display: grid; grid-template-columns: 1fr 1fr;"
          >
            <div
              class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
            >
              <div
                class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-1spx986"
              >
                USDC
              </div>
            </div>
            <div
              class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
            >
              <div
                class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
              >
                7.5%
              </div>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="USDC logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Popover__ReferenceElement-sc-d5tbhs-1 jqqKVf"
          >
            <div
              style="display: inline-block; line-height: 0; padding: 0.25rem;"
            >
              <svg
                class="RoutingDiagram__StyledChevronRight-sc-o1ook0-2 gToNN"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="DAI logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-1spx986"
            >
              DAI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 iNjnaZ"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__StyledRow-sc-o1ook0-0 lmTMKd itvFNV bJMZth"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-1 ifJmrH"
        />
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-between; z-index: 2;"
          width="100%"
        >
          <div
            class="css-vurnku"
            style="display: grid; grid-template-columns: 1fr 1fr;"
          >
            <div
              class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
            >
              <div
                class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-1spx986"
              >
                USDC
              </div>
            </div>
            <div
              class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
            >
              <div
                class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
              >
                2.5%
              </div>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="USDC logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Popover__ReferenceElement-sc-d5tbhs-1 jqqKVf"
          >
            <div
              style="display: inline-block; line-height: 0; padding: 0.25rem;"
            >
              <svg
                class="RoutingDiagram__StyledChevronRight-sc-o1ook0-2 gToNN"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="MKR logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Popover__ReferenceElement-sc-d5tbhs-1 jqqKVf"
          >
            <div
              style="display: inline-block; line-height: 0; padding: 0.25rem;"
            >
              <svg
                class="RoutingDiagram__StyledChevronRight-sc-o1ook0-2 gToNN"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="DAI logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-1spx986"
            >
              DAI
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
  >
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 iNjnaZ"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__StyledRow-sc-o1ook0-0 lmTMKd itvFNV bJMZth"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-1 ifJmrH"
        />
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-between; z-index: 2;"
          width="100%"
        >
          <div
            class="css-vurnku"
            style="display: grid; grid-template-columns: 1fr 1fr;"
          >
            <div
              class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
            >
              <div
                class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-1spx986"
              >
                USDC
              </div>
            </div>
            <div
              class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
            >
              <div
                class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
              >
                10%
              </div>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="USDC logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Popover__ReferenceElement-sc-d5tbhs-1 jqqKVf"
          >
            <div
              style="display: inline-block; line-height: 0; padding: 0.25rem;"
            >
              <svg
                class="RoutingDiagram__StyledChevronRight-sc-o1ook0-2 gToNN"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-vurnku"
            style="background-color: rgb(255, 255, 255);"
          >
            <img
              alt="DAI logo"
              class="CurrencyLogo__StyledLogo-sc-1fvnadz-1 fYDXfr"
              src="https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
              style="margin: 0px 10px;"
            />
          </div>
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__TransparentBadge-sc-o1ook0-3 gayll ewhfgt"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-1spx986"
            >
              DAI
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
  />
</DocumentFragment>
`;
